<resources>
    <string name="app_name">HW1</string>
    <string name="action_settings">Settings</string>
    <string name="change_contact">change contact</string>
    <string name="change_sound">change sound</string>
    <string name="john_doe">John Doe</string>
    <string name="contact_picture">contact picture</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sound_1">Sound 1</string>
    <string name="sound_2">Sound 2</string>
    <string name="sound_3">Sound 3</string>
    <string name="sound_4">Sound 4</string>
    <string name="sound_5">Sound 5</string>
    <string name="back_message"> Back to main activity.</string>
    <string name="current_contact_str" />
    <string name="defoult_name">Jon Doe</string>

    <string-array name="myContactArray">
        <item>John Doe</item>
        <item>Jane Doe</item>
        <item>Jan Kowalski</item>
        <item>Krystyna Kowalska</item>
        <item>Jakub Anonimowy</item>
    </string-array >
</resources>
